--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-original"></i></a></li>
+                                    <li><a href=""><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://www.instagram.com/king_karthi_143__/"><i class="lni-instagram-original"></i></a></li>
                                     <li><a href="#"><i class="lni-twitter-original"></i></a></li>
                                     <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
                             
