--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="contact-form pt-30">
-                     <h3>Eail</h3>
+                     <h3>Email</h3>
                         <form id="contact-form" action="mailto:karhickraj123@gmail.com">
                             <div class="single-form">
                                 <input type="text" name="name" placeholder="Name">
@@ -793,7 +793,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © 2022. Template Crafted by karthick raj</p>
+                            <p>Copyright © 2022. Template Crafted by Mr.K.Karthick Raj</p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
